# wallchange

./: .gitignore  README.md  me.lebao3105.wallchange.json  meson.build  pyproject.toml  python3-requirements.json  requirements.txt  subrequirements.json
.github/workflows/: wheels.yml
data/: me.lebao3105.wallchange.appdata.xml.in  me.lebao3105.wallchange.desktop.in  me.lebao3105.wallchange.gschema.xml  meson.build
data/icons/: meson.build
icons/: meson.build
po/: POTFILES  me.lebao3105.wallchange.pot  meson.build  vi.po  wallchange.pot
src/: callbacks.py  imports.py  main.py  meson.build  setwallpaper.py  wallchange.gresource.xml  wallchange.in  windows.py
src/views/: main.blp  prefs.blp  prefs.ui  window.ui
tests/: README.md  test.xml
wallchange/: __init__.py  __main__.py  callbacks.py  imports.py  mainwindow.py  me.lebao3105.wallchange.in  meson.build  setwallpaper.py
