[project]
name = "wallchange"
version = "0.1.0"
description = "Wallpaper changer for desktops"
dependencies = [
    'darkdetect',
    'wxpython'
]
readme = "README.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"wallchange" = "wallchange"}

[project.gui-scripts]
wallchange = "wallchange:start_app"
